--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.mechanitis</groupId>
 	<artifactId>stock-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>stock-service</name>
 	<description>Demo project for Spring Boot</description>
 
